--- a/layouts/partials/sidebar/copyright.html
+++ b/layouts/partials/sidebar/copyright.html
@@ -8,6 +8,8 @@
 {{ end }}
 {{ with .Site.Params.showBuiltWith }}
 <div class="builtwith">
-Built with <a href="https://gohugo.io">Hugo</a> ❤️ <a href="https://github.com/htr3n/hyde-hyde">hyde-hyde</a>.
+<font size="-2">
+Built with <a href="https://gohugo.io">Hugo</a> and based on <a href="https://github.com/htr3n/hyde-hyde">hyde-hyde</a>.
+</font>
 </div>
 {{ end }}
