--- a/layouts/partials/sidebar/social.html
+++ b/layouts/partials/sidebar/social.html
@@ -27,6 +27,12 @@
 	{{ with .Site.Params.social.stackoverflow }}
 	<a href="https://stackoverflow.com/users/{{.}}" rel="me"><i class="fab fa-stack-overflow fa-lg" aria-hidden="true"></i></a>
 	{{ end }}
+	{{ with .Site.Params.social.stackexchange }}
+	<a href="https://physics.stackexchange.com/users/{{.}}" rel="me"><i class="fab fa-stack-exchange fa-lg" aria-hidden="true"></i></a>
+	{{ end }}
+	{{ with .Site.Params.social.orcid }}
+	<a href="https://orcid.org/{{.}}" rel="me"><i class="fa-brands fa-orcid fa-lg" aria-hidden="true"></i></a>
+	{{ end }}
 	{{ with .Site.Params.social.medium}}
 	<a href="https://medium.com/@{{.}}" rel="me"><i class="fab fa-medium fa-lg" aria-hidden="true"></i></a>
 	{{ end }}
@@ -43,6 +49,6 @@
 	&nbsp;<a href="https://about.me/{{.}}"><i class="fas fa-address-card fa-lg" aria-hidden="true"></i></a>
 	{{ end }}
 	{{ with .Site.Params.social.email }}
-	<a href="mailto:{{.}}" rel="me"><i class="fas fa-at fa-lg" aria-hidden="true"></i></a>
+	<a href="mailto:{{.}}" rel="me"><i class="fa-solid fa-envelope fa-lg" aria-hidden="true"></i></a>
 	{{ end }}
 </section>
